--- a/src/components/DropdownInputMinMax/module.css
+++ b/src/components/DropdownInputMinMax/module.css
@@ -1,58 +1,3 @@
-/* module.css */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-toggle {
-  color: black;
-  text-decoration: none;
-  position: relative;
-}
-
-.chevron {
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 4px 4px 0 4px;
-  border-color: #000 transparent transparent transparent;
-  transition: transform 0.2s ease-in-out;
-}
-
-.chevron.rotate {
-  transform: translateY(-50%) rotate(180deg);
-}
-
-.dropdown-menu {
-  position: absolute;
-  top: calc(100% + 5px);
-  left: 0;
-  z-index: 1000;
-  display: none;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-top: none;
-  padding: 10px;
-}
-
-.dropdown-menu.active {
-  display: block;
-}
-
-.input-container {
+.input {
   display: flex;
-  align-items: center;
-}
-
-.input-group {
-  display: flex;
-  align-items: center;
-}
-
-.input-group-text {
-  margin: 0 5px;
 }
