--- a/src/pages/list_announces/page.module.css
+++ b/src/pages/list_announces/page.module.css
@@ -1,6 +1,19 @@
 body {
   background-color: rgb(242, 241, 241);
+  
 }
+
+.container{
+  margin: auto; 
+  width: 70%; 
+  padding: 20px; 
+}
+
+  .c {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
 
 #search {
   background-color: rgb(242, 241, 241);
